name:                rw
version:             2.0
synopsis:            DCSS bot
description:         A bot that plays crawl!
homepage:            https://github.com/rwbarton/rw
license:             BSD3
license-file:        LICENSE
author:              Reid Barton
maintainer:          rwbarton@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  Type:     git
  Location: git://github.com/rwbarton/rw.git

executable rw
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2 -rtsopts
  build-depends:       base ==4.5.*,
                       aeson ==0.6.*,
                       attoparsec ==0.10.*,
                       bytestring ==0.9.*,
                       chan-split ==0.5.*,
                       groom ==0.1.*,
                       lens ==3.3.*,
                       process ==1.1.*,
                       random ==1.0.*,
                       reactive-banana ==0.7.*,
                       text ==0.11.*,
                       transformers ==0.3.*,
                       unordered-containers ==0.2.*,
                       websockets ==0.7.3.0.1,
                       zlib-bindings ==0.1.*
