name:                rw
version:             2.0
synopsis:            DCSS bot
description:         A bot that plays crawl!
homepage:            https://github.com/rwbarton/rw
license:             BSD3
license-file:        LICENSE
author:              Reid Barton
maintainer:          rwbarton@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  Type:     git
  Location: git://github.com/rwbarton/rw.git

executable rw
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-unused-do-bind -O2 -funbox-strict-fields -rtsopts -with-rtsopts=-T -fprof-auto
  build-depends:       base ==4.7.*,
                       aeson ==0.7.*,
                       astar ==0.2.*,
                       attoparsec ==0.10.*,
                       bytestring ==0.10.*,
                       chan-split ==0.5.*,
                       containers ==0.5.*,
                       ekg ==0.3.*,
                       groom ==0.1.*,
                       hashable ==1.2.*,
                       lens ==4.1.*,
                       operational ==0.2.*,
                       process ==1.2.*,
                       random ==1.0.*,
                       reactive-banana ==0.8.*,
                       text ==1.1.*,
                       transformers ==0.3.*,
                       unordered-containers ==0.2.*,
                       websockets ==0.8.*,
                       zlib-bindings ==0.1.*
  build-tools:         c2hs
  include-dirs:        include
  other-modules:       Crawl.Bindings
